syntax = "proto3";
package proto;

import "empty.proto";

service Peer {
    rpc NoticeFromLRRPC(NoticeLRRequest) returns(Empty);
}

message NoticeLRRequest {
    string port = 1;
    string addr = 2;
}